"Aggiunge configurazione deploy: Dockerfile, docker-compose, CORS configurabile"